# tmux-trainsh

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  install.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  train.py  trainsh.py  tsconfig.json  version.sh  vite.config.ts
:memory:/: pools.json
docs/: _index.md  _index.zh.md  documentation.md  documentation.zh.md  example-recipe.toml  example-skill.toml  getting-started.md  getting-started.zh.md  google-drive-example.toml  installation.md  installation.zh.md  python-recipes.md  python-recipes.zh.md  quicktour.md  quicktour.zh.md  recipe-design.md  recipe-design.zh.md  secrets.md  secrets.zh.md  skill-design.md  storage-design.md  storage-design.zh.md
examples/: llamafactory-finetune.recipe  local-test.recipe  nanogpt-train.recipe  ssh-test.recipe  train-llm.recipe  transfer-test.recipe  unsloth-finetune.recipe
scripts/: build-macos-app.sh  check_runtime_coverage.py  convert_legacy_recipe.py  generate_docs.py  install-hooks.sh  pre-commit-check.sh  sync_cli_docs.py  update_readme.py  version.sh
src/: app.tsx  main.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.pxd
src-tauri/icons/App.icon/: icon.json
src-tauri/src/: config.rs  error.rs  google_drive.rs  gpu.rs  host.rs  job.rs  logs.rs  main.rs  pricing.rs  secrets.rs  session.rs  ssh.rs  ssh_keys.rs  storage.rs  sync.rs  terminal.rs  transfer.rs  vast.rs
src-tauri/src/recipe/: execution.rs  interactive.rs  mod.rs  parser.rs  run_logs.rs  types.rs
src-tauri/src/recipe/operations/: conditions.rs  google_drive.rs  http.rs  mod.rs  notify.rs  ssh.rs  sync.rs  tmux.rs  transfer.rs  vast.rs
src-tauri/src/skill/: execution.rs  interactive.rs  mod.rs  parser.rs  run_logs.rs  stream_exec.rs  types.rs
src-tauri/src/skill/operations/: conditions.rs  http.rs  mod.rs  notify.rs  sync.rs  tmux.rs  transfer.rs  vast.rs
tests/: runtime_test_utils.py  test_bundled_examples.py  test_cli_inproc_a.py  test_cli_inproc_b.py  test_command_edges.py  test_command_harness.py  test_commands.py  test_coverage_growth.py  test_dag_processor.py  test_executor_core.py  test_executor_edges.py  test_executor_providers.py  test_executor_vast.py  test_flash_attn_support.py  test_generate_docs.py  test_hf_storage_flows.py  test_host_config_toml.py  test_host_config_yaml.py  test_host_interactive.py  (+44 more)
(+320 files in other folders)
