[project]
name = "tmux-trainsh"
version = "260210.1601"
description = "GPU training workflow automation with tmux"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["cryptography>=42"]

[project.scripts]
train = "trainsh.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainsh"]
