[project]
name = "tmux-trainsh"
version = "1.2026.111"
description = "GPU training workflow automation with tmux"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["cryptography>=42", "pyyaml>=6.0"]

[project.scripts]
train = "trainsh.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["trainsh/**/*.py", "trainsh/**/*.pyrecipe"]

[tool.hatch.build.targets.wheel]
packages = ["trainsh"]
