[package]
name = "doppio"
version = "0.6.0"
description = "trainsh-Doppio desktop app (Tauri)"
authors = ["binbinsh"]
edition = "2021"

# Tauri expects this to be present.
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "time", "net"] }
dirs = "5"
home = "=0.5.11"
walkdir = "2"
tar = "0.4"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
librclone = { git = "https://github.com/binbinsh/librclone-rust", branch = "master" }
shell-words = "1"
which = "6"
shell-escape = "0.1"
portable-pty = "0.8"
toml = "0.8"
regex = "1"
keyring = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
